信息录入功能，带校验

--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,38 @@
     <dependencies>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>7.0.4</version>
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/StuManageSys</url>
+                    <user>root</user>
+                    <password>root</password>
+                </configuration>
+                <dependencies>
+                    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>8.0.21</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source><!-- 源代码开发版本 -->
+                    <target>1.8</target><!-- java编译版本 -->
+                    <encoding>UTF8</encoding> <!-- 项目的编码 -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
